@@ -7,6 +7,8 @@ Bug fixes
     * Fix search in library (using a specific filter or the 'everything' filter)
     * Fix scrobbling to Last.fm
     * Scrolling with the mouse wheel on the tray icon correctly changes the volume
+    * Some lyrics from LyricsWiki redirects to another page. The plugin now
+      follows those redirect to find the actual lyrics.
 
 
 1.7a1 (2013-02-08)
